# lib/db/src/schema/index.ts
@@ -24,3 +24,5 @@ export * from "./revision";
 export * from "./syllabus";
 export * from "./semantic-cache";
 export * from "./document-context";
+export * from "./quiz";
+export * from "./study-activity";
